--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,17 +6,22 @@ export(.kernel_captial_curly_f_inf_limit)
 export(.ode_model_network_seir)
 export(.ode_model_network_sir)
 export(.ode_model_reference)
+export(convert_to_model_parameters_seir)
 export(final_size)
 export(helper_g_function)
 export(helper_g_function_derivative)
 export(initial_x)
 export(mean_degree)
+export(mean_excess_degree)
 export(model_network)
 export(model_network_seir)
 export(model_network_sir)
 export(model_reference)
+export(model_reference_with_epi_parms)
 export(plot_epidemic)
 export(probability_generating_function)
+export(simulate_outbreak_seir_network)
+export(simulate_outbreak_sir_network)
 export(theory_network_final_size)
 export(theory_network_growth_rate)
 export(theory_network_reproduction_number)
