fix: document function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,7 @@ export(model_network)
 export(model_network_seir)
 export(model_network_sir)
 export(model_reference)
+export(models_combined)
 export(plot_epidemic)
 export(probability_generating_function)
 export(simulate_outbreak_seir_network)
