--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,10 +15,8 @@ Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
 Imports: 
-    deSolve,
-    dplyr,
-    ggplot2,
-    tidyr
+    jsonlite,
+    PBSddesolve
 Suggests: 
     knitr,
     rmarkdown
