task: export function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,7 @@ export(model_reference)
 export(models_combined)
 export(probability_generating_function)
 export(simulate_outbreak_seir_network)
+export(simulate_outbreak_seir_reference)
 export(simulate_outbreak_sir_network)
 export(theory_network_final_size)
 export(theory_network_growth_rate)
